--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,49 @@
-.svg-header {
-    background-image: url(../img/header.css.svg);
-    vertical-align: middle;
-}
 select{
     width:220px;
     height:30px;
     border-radius: 0px;
     background-color:#84c225;
     color: white;
+}
+#container2{
+    display:flex;
+    width:150px;
+    background-color:#f2f2f2;
+    margin-left: 70px;
+}
+#container3>p{
+    line-height: 5px;
+}
+#container1{
+    display:flex;
+    margin:auto;
+    justify-content:space-between;
+    width:78%;
+}
+#input{
+    margin-left: 20px;
+    width:550px;
+    height:25px;
+    margin-top: 20px;
+}
+#container_2{
+    justify-content:space-between;
+    width:78%;
+    margin:auto;
+}
+#img_1{
+    height:31px;
+    width:31px;
+    margin-top: 20px;
+    background-color: #84c225;
+    color: white;
+
+}
+#container_1{
+    display:flex;
+    padding-left: 0px;
+    justify-content: flex-start;
+}
+#img_2{
+    margin-right: 0px;
 }
