--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,10 @@ select{
 }
 #container2{
     display:flex;
-    width:150px;
+    width:130px;
     background-color:#f2f2f2;
     margin-left: 70px;
+    justify-content: space-evenly;
 }
 #container3>p{
     line-height: 5px;
@@ -47,4 +48,12 @@ select{
 }
 #img_2{
     margin-right:0px;
+}
+#p_Tag{
+    padding-left: 23px;
+}
+#img_3{
+    width:38px;
+    height:50px;
+    padding-top: 7px;
 }
