--- a/css/index.css
+++ b/css/index.css
@@ -28,12 +28,14 @@ select{
     margin-top: 20px;
 }
 #container_2{
-    justify-content:space-between;
+    display:flex;
+    /* justify-content:space-between; */
     width:78%;
     margin:auto;
+    border:1px solid black;
 }
 #img_1{
-    height:29px;
+    height:28.5px;
     width:31px;
     margin-top:20px;
     background-color:#84c225;
@@ -56,4 +58,28 @@ select{
     width:38px;
     height:50px;
     padding-top: 7px;
+}
+#div1{
+    display:flex;
+    padding-top: 7px;
+    margin-left: 12px;
+}
+#div1>img{
+    width:20px;
+    height:20px;
+}
+#div1>p{
+    margin-top:0px;
+}
+#div2{
+    display:flex;
+    padding-top: 7px;
+    margin-left: 12px;
+}
+#div2>img{
+    width:20px;
+    height:20px;
+}
+#div2>p{
+    margin-top:0px;
 }
